Bug 163741 - FILEOPEN PPTX: Font size imported as 10pt instead of 18pt
Summary: FILEOPEN PPTX: Font size imported as 10pt instead of 18pt
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Mohit Marathe
URL:
Whiteboard: target:26.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-Textbox
  Show dependency treegraph
 
Reported: 2024-11-02 23:21 UTC by Gerald Pfeifer
Modified: 2026-05-09 20:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (2.35 MB, application/vnd.ms-powerpoint)
2024-11-02 23:21 UTC, Gerald Pfeifer
Details
Visual comparison: PowerPoint (left) - Impress (right) (110.63 KB, image/png)
2024-11-02 23:21 UTC, Gerald Pfeifer
Details
Minimized example file (22.82 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2024-11-09 17:18 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2024-11-02 23:21:34 UTC
Created attachment 197361 [details]
Sample slide (PPTX)

How to repeat:

 1. Open sample document in PowerPoint and Impress. 
 2. Observe how the first line of text appears much larger and shows
    as 18pt in PowerPoint, whereas in Impress it looks about the size
    of the two lines below and 10pt.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 43cd683230bc05d294b1bd64f1e7932feccdd3fb
CPU threads: 12; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Comment 1 Gerald Pfeifer 2024-11-02 23:21:57 UTC
Created attachment 197362 [details]
Visual comparison: PowerPoint (left) - Impress (right)
Comment 2 m_a_riosv 2024-11-03 09:41:58 UTC
Maybe because the Popping Light font is not installed. And the substitution font selected by LO is not a good election.
Comment 3 Gerald Pfeifer 2024-11-03 11:11:47 UTC
(In reply to m_a_riosv from comment #2)
> Maybe because the Popping Light font is not installed.

Poppins is installed. And even if we'd use a replacement font (Arial...)
the size should not be that different.

And I wasn't explicit, in the font selector it literally shows 10pt 
instead of 18pt, too.
Comment 4 Gabor Kelemen (Collabora) 2024-11-09 11:38:03 UTC
Confirming in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9e3803ae438ddcf91ec0e15431be379561d28ba6
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default
Comment 5 Gabor Kelemen (Collabora) 2024-11-09 17:18:30 UTC
Looks like this started in 7.0 with:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=912217285b3058efa54c2336f91fda4efdad6ff0

author	Serge Krot <Serge.Krot@cib.de>	2020-04-10 20:08:37 +0200
committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	2020-04-20 22:17:42 +0200
commit 912217285b3058efa54c2336f91fda4efdad6ff0 (patch)

tdf#119187 fix: Top-aligned text in PPTX becomes bottom-aligned
Comment 6 Gabor Kelemen (Collabora) 2024-11-09 17:18:54 UTC
Created attachment 197504 [details]
Minimized example file
Comment 7 Timur 2026-03-11 10:22:53 UTC
Should be fixed with https://gerrit.libreoffice.org/c/core/+/201435.
Comment 8 Commit Notification 2026-03-13 07:23:36 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/771eca5fc2ca88d931f4935f4a5ac74136096df9

tdf#163741 pptx import: skip placeholder matching for idx=UINT32_MAX

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gerald Pfeifer 2026-03-16 11:32:24 UTC
Verified with the current daily snapshot:

   Version: 26.8.0.0.alpha0+ (X86_64)
   Build ID: ab04dd150ee6f9896ab420c33cc753077d686696
   CPU threads: 14; OS: Linux 6.19; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US


Are you planning to add a testcase? That would seem useful?