tdf#163741 pptx import: skip placeholder matching for idx=UINT32_MAX

Placeholders with idx="4294967295" (SAL_MAX_UINT32) are sentinel values
meaning "no specific placeholder link." Previously, getInteger() silently
overflowed this to 0, causing the shape to wrongly match a layout
placeholder and inherit incorrect text properties (e.g. 10pt instead of
the expected 18pt from the master's bodyStyle).

Parse idx as unsigned via getUnsigned() to detect the sentinel, then skip
setSubTypeIndex(), findPlaceholderByIndex(), and findPlaceholder() entirely
so the shape falls through to the master text style cascade.

Signed-off-by: Mohit Marathe <mohit.marathe@collabora.com>
Change-Id: Ib8b0c068720440695bffe25bc23d3f28406fea60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/200622
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>